# wiki_knowledge_graph

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
examples/: ml_neighborhood_demo.md
notes/: SESSION_2026-07-14_consolidation.md  reference.md
tests/: test_entity_fetch.py  test_kg_json_writer.py  test_neighborhood.py  test_sparql_client.py  test_vocab_probe.py
wikidata_connector/: cli.py  config.py  entity_fetch.py  kg_json_writer.py  neighborhood.py  query_fragments.py  relation_map.py  sparql_client.py  vocab_probe.py
